# mastering-algorithms-wite-c

./: CMakeLists.txt  README.md  main  main.c  sharemain
include/: bistree.h  bitree.h  chtbl.h  clist.h  dlist.h  event.h  hashpjw.h  list.h  ohtbl.h  page.h  queue.h  set.h  singleList.h  stack.h  traverse.h  utils.h
src/: bistree.c  bitree.c  chtbl.c  clist.c  dlist.c  event.c  list.c  ohtbl.c  page.c  queue.c  set.c  singleList.c  stack.c  traverse.c  utils.c
